--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,38 @@
-# Prerequisites
-*.d
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
+node_modules
+.DS_Store
+dist
+dist-ssr
+coverage
+*.local
 
-# Precompiled Headers
-*.gch
-*.pch
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 
-# Linker files
-*.ilk
+*.tsbuildinfo
 
-# Debugger Files
-*.pdb
+.eslintcache
 
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
+# Cypress
+/cypress/videos/
+/cypress/screenshots/
 
-# Fortran module files
-*.mod
-*.smod
+# Vitest
+__screenshots__/
 
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
-*.exe
-*.out
-*.app
-
-# debug information files
-*.dwo
+.vscode/
