--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.26"
+    "dompurify": "^3.3.1",
+    "markdown-it": "^14.1.0",
+    "vue": "^3.5.26",
+    "vue-router": "^4.6.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.3",
